# usm-day-pass

./: .gitignore  README.md  alembic.ini  passes.db  pyproject.toml
alembic/: env.py
alembic/versions/: 5fdbbb8f7658_created_clubs_table.py
usm-day-pass/: main.py
usm-day-pass/core/entities/: hotel.py
usm-day-pass/core/interfaces/: day_pass.py
usm-day-pass/core/models/: hotels.py
usm-day-pass/repositories/: day_pass.py
usm_day_pass/: api.py  app.py  config.py
usm_day_pass/core/entities/: __init__.py  hotel.py
usm_day_pass/core/interfaces/: __init__.py  day_pass.py  day_pass_repository.py
usm_day_pass/core/models/: __init__.py  hotels.py
usm_day_pass/core/repositories/: __init__.py  passes_adapter.py
usm_day_pass/core/repositories/tables/: __init__.py  hotels.py  passes_repository.py
usm_day_pass/core/services/: __init__.py  passes.py
usm_day_pass/repositories/: __init__.py  day_pass.py  passes_repository.py
usm_day_pass/repositories/tables/: __init__.py  hotels.py
usm_day_pass/templates/: passes.html
